# LeleFarm

./: .env  dataset_panen.csv  main.py  pyproject.toml  requirements.txt  run
lib/: supabase_client.py
routes/: auth.py  bibit.py  dashboard.py  home.py  kematian.py  kolam.py  pakan.py  pakan_stok.py  panen.py  pemberian_pakan.py  pengeluaran.py  perhitungan_pakan.py  prediksi.py  ringkasan.py
services/: bibit.py  kematian.py  kolam.py  pakan.py  pakan_stok.py  panen.py  pemberian_pakan.py  pengeluaran.py  perhitungan_pakan.py  user.py
services/ai/: client.py  prompt.py  ringkasan_ai.py  schema.py
services/dataset/: generate_dataset.py
templates/: 404.html  base.html  index.html  login.html  register.html
templates/dashboard/: base.html  bibit.html  dashboard.html  kematian.html  kolam.html  pakan.html  pakan_stok.html  panen.html  pemberian_pakan.html  pengeluaran.html  perhitungan_pakan.html  prediksi.html  ringkasan.html
templates/dashboard/partials/: header.html  sidebar.html
